--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Arjun Dass</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Theme CSS -->
-    <link href="css/freelancer.min.css" rel="stylesheet">
+    <link href="css/freelancer.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -41,7 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">Arjun Dass</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,10 +51,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#education">Education</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="#skills">Skills</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#portfolio">Portfolio</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
@@ -71,16 +74,103 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/me.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Start Bootstrap</span>
+                        <span class="name">Arjun Dass</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">Web Developer - Game Developer - Software  Developer</span>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+
+    <!-- Education Section -->
+    <section class="education" id="education">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Education</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+            	<div class="col-lg-12">	
+            		<div class="pull-left">
+            			<h4>Stevens Institute of Technology, Hoboken, NJ</h4>
+            		</div>
+            		<div class="pull-right">
+            			<h4 class="text-right">Expected 2017</h4>
+            		</div>
+            	</div>
+            	<div class="col-lg-12">
+            		<p>Master of Science in Computer Science</p>
+            	</div>
+            	<div class="col-lg-12">
+            		<p>Course Work: Human Computer Interaction, Algorithm, Web Programming, DBMS</p>
+            	</div>
+            </div><br/>
+            <div class="row">
+            	<div class="col-lg-12">	
+            		<div class="pull-left">
+            			<h4>SRM University, Kattankukathur, Tamil Nadu</h4>
+            		</div>
+            		<div class="pull-right">
+            			<h4 class="text-right">May 2016</h4>
+            		</div>
+            	</div>
+            	<div class="col-lg-12">
+            		<p>Bachelor of Technology in Computer Science</p>
+            	</div>
+            	<div class="col-lg-12">
+            		<p>GPA: <span>7.1/10</span></p>
+            	</div>
+            </div>
+ 
+    </section>
+
+    <!-- Skills Section -->
+    <section class="success" id="skills">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Skills</h2>
+                    <hr class="star-light">
+                </div>
+            </div>
+            <div class="row">
+            	<div class="col-lg-3 col-lg-offset-1">
+            		<h4>Operating Systems</h4>
+            		<p>Unix (Ubuntu 16.4), Windows XP/7/8/10</p>
+            	</div>
+            	<div class="col-lg-3 col-lg-offset-1">
+            		<h4>Programming Language</h4>
+            		<p>C++, C, Java, SQL, PHP, Python</p>
+            	</div>
+            	<div class="col-lg-3 col-lg-offset-1">
+            		<h4>Database Systems</h4>
+            		<p>Oracle 8i, SQL Server, MS Access, MongoDB, PostgreSQL</p>
+            	</div>
+            </div><br/>
+            <div class="row">
+            	<div class="col-lg-3 col-lg-offset-1">
+            		<h4>Tools</h4>
+            		<p>UDK, Unity, Maya, Adobe Photoshop, Android Studio, Ms Office</p>
+            	</div>
+            	<div class="col-lg-3 col-lg-offset-1">
+            		<h4>Internet Technologies</h4>
+            		<p>HTML5, CSS3, Javascript (Node, AngularJs, React).</p>
+            	</div>
+            	<div class="col-lg-3 col-lg-offset-1">
+            		<h4>Certificates</h4>
+            		<p>Oracle Certified Java Programmer (OCJP)</p>
+            		<p>NIIT Certificate of Excellence</p>
+            		<p>Certificate of Excellent Performance - Hindustan Petroleum</p>
+            		<p></i>Certificate of Excellent Performance - JobNinja</p>
+            	</div>
+            </div><br/>
+        </div>
+    </section>
 
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
@@ -150,31 +240,6 @@
                             </div>
                         </div>
                         <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- About Section -->
-    <section class="success" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-light">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
                     </a>
                 </div>
             </div>
