Updated Image links

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     								<i class="fa fa-search-plus fa-3x"></i>
     							</div>
     						</div>
-    						<img src="img/portfolio/cabin.png" class="img-responsive" alt="">
+    						<img src="img/web-development.png" class="img-responsive" alt="">
     					</a>
     				</div>
     				<div class="col-sm-4 portfolio-item">
@@ -335,7 +335,7 @@
     								<i class="fa fa-search-plus fa-3x"></i>
     							</div>
     						</div>
-    						<img src="img/portfolio/cake.png" class="img-responsive" alt="">
+    						<img src="img/game-development.png" class="img-responsive" alt="">
     					</a>
     				</div>
     				<div class="col-sm-4 portfolio-item">
@@ -345,7 +345,7 @@
     								<i class="fa fa-search-plus fa-3x"></i>
     							</div>
     						</div>
-    						<img src="img/portfolio/circus.png" class="img-responsive" alt="">
+    						<img src="img/android-development.png" class="img-responsive" alt="">
     					</a>
     				</div>
     				<div class="col-sm-4 portfolio-item">
@@ -355,7 +355,7 @@
     								<i class="fa fa-search-plus fa-3x"></i>
     							</div>
     						</div>
-    						<img src="img/portfolio/game.png" class="img-responsive" alt="">
+    						<img src="img/java-projects.png" class="img-responsive" alt="">
     					</a>
     				</div>
     				<div class="col-sm-4 portfolio-item">
@@ -365,7 +365,7 @@
     								<i class="fa fa-search-plus fa-3x"></i>
     							</div>
     						</div>
-    						<img src="img/portfolio/safe.png" class="img-responsive" alt="">
+    						<img src="img/python-projects.png" class="img-responsive" alt="">
     					</a>
     				</div>
     				<div class="col-sm-4 portfolio-item">
