--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
     						<a href="#portfolio">Portfolio</a>
     					</li>
     					<li class="page-scroll">
+    						<a href="#projects">Projects</a>
+    					</li>
+    					<li class="page-scroll">
     						<a href="#contact">Contact</a>
     					</li>
     				</ul>
@@ -325,7 +328,7 @@
     								<i class="fa fa-search-plus fa-3x"></i>
     							</div>
     						</div>
-    						<img src="img/web-development.png" class="img-responsive" alt="">
+    						<img src="img/web-development.png" class="img-responsive" alt="Web Development">
     					</a>
     				</div>
     				<div class="col-sm-4 portfolio-item">
@@ -335,7 +338,7 @@
     								<i class="fa fa-search-plus fa-3x"></i>
     							</div>
     						</div>
-    						<img src="img/game-development.png" class="img-responsive" alt="">
+    						<img src="img/game-development.png" class="img-responsive" alt="Game Development">
     					</a>
     				</div>
     				<div class="col-sm-4 portfolio-item">
@@ -345,7 +348,7 @@
     								<i class="fa fa-search-plus fa-3x"></i>
     							</div>
     						</div>
-    						<img src="img/android-development.png" class="img-responsive" alt="">
+    						<img src="img/android-development.png" class="img-responsive" alt="Android Development">
     					</a>
     				</div>
     				<div class="col-sm-4 portfolio-item">
@@ -355,7 +358,7 @@
     								<i class="fa fa-search-plus fa-3x"></i>
     							</div>
     						</div>
-    						<img src="img/java-projects.png" class="img-responsive" alt="">
+    						<img src="img/java-projects.png" class="img-responsive" alt="Java Projects">
     					</a>
     				</div>
     				<div class="col-sm-4 portfolio-item">
@@ -365,7 +368,7 @@
     								<i class="fa fa-search-plus fa-3x"></i>
     							</div>
     						</div>
-    						<img src="img/python-projects.png" class="img-responsive" alt="">
+    						<img src="img/python-projects.png" class="img-responsive" alt="Python Projects">
     					</a>
     				</div>
     				<div class="col-sm-4 portfolio-item">
@@ -375,13 +378,56 @@
     								<i class="fa fa-search-plus fa-3x"></i>
     							</div>
     						</div>
-    						<img src="img/portfolio/submarine.png" class="img-responsive" alt="">
+    						<img src="img/database-development.png" class="img-responsive" alt="Database Development">
     					</a>
     				</div>
     			</div>
     		</div>
     	</section>
 
+    	<!-------- Projects Section ------>
+    	<section class="success" id="projects">
+    		<div class="container">
+    			<div class="row">
+    				<div class="col-lg-12 text-center">
+    					<h2>Projects</h2>
+    					<hr class="star-light">
+    				</div>
+    			</div>
+    			<div class="row">
+    				<div class="col-lg-12">	
+    					<div class="pull-left">
+    						<h4>BookCloud - Startup, Web Programming</h4>
+    					</div>
+    					<div class="pull-right">
+    						<h4 class="text-right">Date</h4>
+    					</div>
+    				</div>
+    				<div class="col-lg-12">
+    					<ul>
+	    					<li><p>Developed a web application by implementing the LAMP Stack for college students to allow them to sell or buy used and new books.</p></li>
+	    					<li><p>Developed a Database Schema for the entire Web Application using MySQL.</p></li>
+	    					<li><p>Developed a MySQL based Chat Application and integrated it into the website.</p></li>
+	    				</ul>
+    				</div>
+    			</div><br/><br/>
+    			<div class="row">
+    				<div class="col-lg-12">	
+    					<div class="pull-left">
+    						<h4>Cost Cutting Techniques in LAN, Simulation</h4>
+    					</div>
+    					<div class="pull-right">
+    						<h4 class="text-right">Date</h4>
+    					</div>
+    				</div>
+    				<div class="col-lg-12">
+    					<ul>
+    						<li><p>The Project defines the techniques by which we could reduce the cost implementing the LAN for an Organiazation using vlan in switches, truncing, voice over IP etc.</p></li>
+    					</ul>
+    				</div>
+    			</div>
+    		</div>
+    	</section>
     	<!-- Contact Section -->
     	<section id="contact">
     		<div class="container">
@@ -444,8 +490,8 @@
     				<div class="row">
     					<div class="footer-col col-md-4">
     						<h3>Location</h3>
-    						<p>3481 Melrose Place
-    							<br>Beverly Hills, CA 90210</p>
+    						<p>85 Sherman Avenue
+    							<br>Jersey City, NJ 07307</p>
     						</div>
     						<div class="footer-col col-md-4">
     							<h3>Around the Web</h3>
@@ -478,7 +524,7 @@
     				<div class="container">
     					<div class="row">
     						<div class="col-lg-12">
-    							Copyright &copy; Your Website 2016
+    							Copyright &copy; Arjun Dass 2016
     						</div>
     					</div>
     				</div>
@@ -506,52 +552,46 @@
     						<div class="col-lg-12">
     							<div class="modal-body">
     								<div class="col-lg-4 ">
-    									<h2>Project Title</h2>
+    									<h3>User Authentication System</h3>
     									<hr class="star-primary">
-    									<img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-    									<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+    									<img src="img/projects/userAuthentication.png" class="img-responsive img-centered" alt="User Authentication System">
+    									<p style="text-align: justify;">A Simple user authentication system, developed using MEAN Stack. The application allows you to register yourself and then login using your credentials. I have used Mongolabs to store the user data and EJS as the view Engine for the handling the front-end.</p>
     									<ul class="list-inline item-details">
-    										<li>Client:
-    											<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-    											</strong>
+    										<li>Tags:
+    											<strong>Nodejs, Mean Stack, MongoDB</strong>
     										</li>
     										<li>Date:
-    											<strong><a href="http://startbootstrap.com">April 2014</a>
-    											</strong>
+    											<strong>April 2014</strong>
     										</li>
     										<li>Service:
-    											<strong><a href="http://startbootstrap.com">Web Development</a>
-    											</strong>
+    											<strong>Web Development</strong>
     										</li>
     									</ul>
-    									<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button>
+    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Development/tree/master/Lab%2010"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
+    								</div>
+    								<div class="col-lg-4">
+    									<h3>Server-Client Side Manipulation</h3>
+    									<hr class="star-primary">
+    									<img src="img/projects/text-manipulation.png" class="img-responsive img-centered" alt="Server-Client Side Text Manipulation">
+    									<p style="text-align:justify;">A Project to demonstrate the functioning of both server-side data handling using NojeJs and client-side data handling using AJAX.</p>
+    									<ul class="list-inline item-details">
+    										<li>Tags:
+    											<strong>Nodejs, Ajax, MongoDB</strong>
+    										</li>
+    										<li>Date:
+    											<strong>April 2014</strong>
+    										</li>
+    										<li>Service:
+    											<strong>Web Development</strong>
+    										</li>
+    									</ul>
+    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Development/tree/master/Server-Client%20Side%20Manipulation"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
     								</div>
     								<div class="col-lg-4">
     									<h2>Project Title</h2>
     									<hr class="star-primary">
-    									<img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-    									<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-    									<ul class="list-inline item-details">
-    										<li>Client:
-    											<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-    											</strong>
-    										</li>
-    										<li>Date:
-    											<strong><a href="http://startbootstrap.com">April 2014</a>
-    											</strong>
-    										</li>
-    										<li>Service:
-    											<strong><a href="http://startbootstrap.com">Web Development</a>
-    											</strong>
-    										</li>
-    									</ul>
-    									<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button>
-    								</div>
-    								<div class="col-lg-4">
-    									<h2>Project Title</h2>
-    									<hr class="star-primary">
-    									<img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-    									<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+    									<img src="img/GoFood.png" class="img-responsive img-centered" alt="">
+    									<p></p>
     									<ul class="list-inline item-details">
     										<li>Client:
     											<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
