--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
     									<h3>Server-Client Side Manipulation</h3>
     									<hr class="star-primary">
     									<img src="img/projects/text-manipulation.png" class="img-responsive img-centered" alt="Server-Client Side Text Manipulation">
-    									<p style="text-align:justify;">A Project to demonstrate the functioning of both server-side data handling using NojeJs and client-side data handling using AJAX.</p>
+    									<p style="text-align:justify;">A Project to demonstrate the functioning of both server-side and the client-side. The client-sdeuses AJAX and the server side program uses NodeJs. The form for both the programs has validations.</p>
     									<ul class="list-inline item-details">
     										<li>Tags:
     											<strong>Nodejs, Ajax, MongoDB</strong>
@@ -588,25 +588,23 @@
     									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Development/tree/master/Server-Client%20Side%20Manipulation"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
     								</div>
     								<div class="col-lg-4">
-    									<h2>Project Title</h2>
+    									<h3>GoFood - Order-Sell Food Online</h3>
     									<hr class="star-primary">
-    									<img src="img/GoFood.png" class="img-responsive img-centered" alt="">
-    									<p></p>
+    									<img src="img/projects/GoFood.png" class="img-responsive img-centered" alt="">
+    									<p style="text-align: justify;">GoFood is an E-commerce web application simulation which allows you to order food online. The application provides platform for both the vendors to add their product and users to view all these products. Application also allows you to search.</p>
     									<ul class="list-inline item-details">
-    										<li>Client:
-    											<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-    											</strong>
+    										<li>Tags:
+    											<strong>Nodejs, MongoDB, Elastic search</strong>
     										</li>
     										<li>Date:
     											<strong><a href="http://startbootstrap.com">April 2014</a>
     											</strong>
     										</li>
     										<li>Service:
-    											<strong><a href="http://startbootstrap.com">Web Development</a>
-    											</strong>
+    											<strong>Web Development</strong>
     										</li>
     									</ul>
-    									<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button>
+    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Programming-Project"><button type="button" class="btn btn-default"><i class="fa fa-github"></i>View</button></a>
     								</div>
     							</div>
     						</div>
@@ -627,46 +625,41 @@
     						<div class="col-lg-12">
     							<div class="modal-body">
     								<div class="col-lg-4 ">
-    									<h2>Project Title</h2>
+    									<h3>Crazy Aliens</h3>
     									<hr class="star-primary">
-    									<img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-    									<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+    									<img src="img/projects/crazyAliens.png" class="img-responsive img-centered" alt="">
+    									<p style="text-align: justify;">Crazy Alien is a game Developed using HTML5 and Javascript. The game uses the quintus library. User can control the movement of the player using Arrow keys. Reach the top and you will win the game. You must avoid touching the enemies, however landing on them will kill them.</p>
     									<ul class="list-inline item-details">
-    										<li>Client:
-    											<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-    											</strong>
+    										<li>Tags:
+    											<strong>HTML5, Javascript, Game-Development</strong>
     										</li>
     										<li>Date:
-    											<strong><a href="http://startbootstrap.com">April 2014</a>
+    											<strong>April 2014</a>
     											</strong>
     										</li>
     										<li>Service:
-    											<strong><a href="http://startbootstrap.com">Web Development</a>
-    											</strong>
+    											<strong>Game Development</strong>
     										</li>
     									</ul>
-    									<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button>
+    									<a href="https://kiiiinnnnnnnnnyyyy.github.io/" target="_blank"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
     								</div>
     								<div class="col-lg-4">
-    									<h2>Project Title</h2>
+    									<h3>Ping - Pong</h3>
     									<hr class="star-primary">
-    									<img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-    									<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+    									<img src="img/projects/ping-pong.png" class="img-responsive img-centered" alt="">
+    									<p style="text-align: justify;">Ping - Pong is a game developed in HTML5 and Javascript. The movement of the paddle can be controlled using mouse movements. Ballspeed will increase or decrease depending on the angle with which it hits the surface. The person to score 3 points first wins the game.</p>
     									<ul class="list-inline item-details">
-    										<li>Client:
-    											<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-    											</strong>
+    										<li>Tags:
+    											<strong>HTML5, Javascript, Game Development</strong>
     										</li>
     										<li>Date:
-    											<strong><a href="http://startbootstrap.com">April 2014</a>
-    											</strong>
+    											<strong>April 2014</strong>
     										</li>
     										<li>Service:
-    											<strong><a href="http://startbootstrap.com">Web Development</a>
-    											</strong>
+    											<strong>Game Development</strong>
     										</li>
     									</ul>
-    									<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button>
+    									<a target="_blank" href="https://kiiiinnnnnnnnnyyyy.github.io/Ping-Pong/"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
     								</div>
     								<div class="col-lg-4">
     									<h2>Project Title</h2>
