Game Development portfolio

--- a/index.html
+++ b/index.html
@@ -662,25 +662,25 @@
     									<a target="_blank" href="https://kiiiinnnnnnnnnyyyy.github.io/Ping-Pong/"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
     								</div>
     								<div class="col-lg-4">
-    									<h2>Project Title</h2>
+    									<h3>Attack of the Cuteness</h3>
     									<hr class="star-primary">
-    									<img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-    									<p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+    									<img src="img/projects/corona.png" class="img-responsive img-centered" alt="">
+    									<p style="text-align: justify;">Attack of the cuteness is a mobile platform game which can be played on both Androif and Iphone device. The game is developed using Corona SDK and Outlaw. You need to hit the aliens before they reach the planet. Click on the aliens to destroy them.</p>
     									<ul class="list-inline item-details">
-    										<li>Client:
-    											<strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+    										<li>Tags:
+    											<strong>Corona SDK, Outlaw, Game-Development
     											</strong>
     										</li>
     										<li>Date:
-    											<strong><a href="http://startbootstrap.com">April 2014</a>
+    											<strong>April 2014
     											</strong>
     										</li>
     										<li>Service:
-    											<strong><a href="http://startbootstrap.com">Web Development</a>
+    											<strong>Game Development
     											</strong>
     										</li>
     									</ul>
-    									<button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> View</button>
+    									<a target="_blank" href="https://github.com/kiiiiNNNNNNNNNyyyy/Game-Development/blob/master/Corona%20Game%20-%20Attack%20of%20the%20Cuteness"><button type="button" class="btn btn-default"><i class="fa fa-github"></i> View</button></a>
     								</div>
     							</div>
     						</div>
