--- a/index.html
+++ b/index.html
@@ -382,6 +382,35 @@
     	<section class="success" id="projects">
     		<div class="container">
     			<div class="row">
+    				<div class="col-lg-12">	
+    					<div class="pull-left">
+    						<h4>Interactive Task Manager - Human Computer Interaction</h4>
+    					</div>
+    					<div class="pull-right">
+    						<h4 class="text-right">December 2016</h4>
+    					</div>
+    				</div>
+    				<div class="col-lg-12">
+    					<ul>
+    						<li><p>A Web application molded into a game to make you more productive and Efficient. The application is designed using HTML, CSS and Javascript. The application allows you to add tasks and at the same time provides you with an interactive Snakes and Ladders game. The application also features a walkthrough which will help you with the functioning of the application.</p></li>
+    					</ul>
+    				</di
+    			<div class="row">
+    				<div class="col-lg-12">	
+    					<div class="pull-left">
+    						<h4>GoFood - Buy and Sell Food Online</h4>
+    					</div>
+    					<div class="pull-right">
+    						<h4 class="text-right">November 2016</h4>
+    					</div>
+    				</div>
+    				<div class="col-lg-12">
+    					<ul>
+    						<li><p>An e-commerce prototype website built using the MEAN stack to allow users to order food online. The site also allows user to compare the prices of the same cuisine offered by different vendors. The application also uses Elastic search for real time searching of the products.</p></li>
+    					</ul>
+    				</div>
+    			</div>
+    			<div class="row">
     				<div class="col-lg-12 text-center">
     					<h2>Projects</h2>
     					<hr class="star-light">
