--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
     						<li><p>An e-commerce prototype website built using the MEAN stack to allow users to order food online. The site also allows user to compare the prices of the same cuisine offered by different vendors. The application also uses Elastic search for real time searching of the products.</p></li>
     					</ul>
     				</div>
-    			</div>
+    			</div><br/><br/>
     			<div class="row">
     				<div class="col-lg-12">	
     					<div class="pull-left">
@@ -425,7 +425,7 @@
     					<div class="pull-right">
     						<h4 class="text-right">Date</h4>
     					</div>
-    				</div>
+    				</div><br/><br/>
     				<div class="col-lg-12">
     					<ul>
 	    					<li><p>Developed a web application by implementing the LAMP Stack for college students to allow them to sell or buy used and new books.</p></li>
