Added new Projects

--- a/index.html
+++ b/index.html
@@ -398,7 +398,8 @@
     				</div>
     				<div class="col-lg-12">
     					<ul>
-    						<li><p>A Web application molded into a game to make you more productive and Efficient. The application is designed using HTML, CSS and Javascript. The application allows you to add tasks and at the same time provides you with an interactive Snakes and Ladders game. The application also features a walkthrough which will help you with the functioning of the application.</p></li>
+    						<li><p>A Web application molded into a game to make you more productive and Efficient. The application is designed using HTML, CSS and Javascript.</p></li>
+    						<li><p>The application allows you to add tasks and at the same time provides you with an interactive Snakes and Ladders game. The application also features a walkthrough which will help you with the functioning of the application.</p></li>
     					</ul>
     				</div>
     			</div>
@@ -413,7 +414,8 @@
     				</div>
     				<div class="col-lg-12">
     					<ul>
-    						<li><p>An e-commerce prototype website built using the MEAN stack to allow users to order food online. The site also allows user to compare the prices of the same cuisine offered by different vendors. The application also uses Elastic search for real time searching of the products.</p></li>
+    						<li><p>An e-commerce prototype website built using the MEAN stack to allow users to order food online.</p></li> 
+    						<li><p>The site also allows user to compare the prices of the same cuisine offered by different vendors. The application also uses Elastic search for real time searching of the products.</p></li>
     					</ul>
     				</div>
     			</div><br/><br/>
