Added new Projects

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
     					<div class="pull-right">
     						<h4 class="text-right">December 2016</h4>
     					</div>
-    				</div>
+    				</div><br/><br/> 	
     				<div class="col-lg-12">
     					<ul>
     						<li><p>A Web application molded into a game to make you more productive and Efficient. The application is designed using HTML, CSS and Javascript.</p></li>
@@ -425,7 +425,7 @@
     						<h4>BookCloud - Startup, Web Programming</h4>
     					</div>
     					<div class="pull-right">
-    						<h4 class="text-right">Date</h4>
+    						<h4 class="text-right">August 2015</h4>
     					</div>
     				</div><br/><br/>
     				<div class="col-lg-12">
@@ -442,7 +442,7 @@
     						<h4>Cost Cutting Techniques in LAN, Simulation</h4>
     					</div>
     					<div class="pull-right">
-    						<h4 class="text-right">Date</h4>
+    						<h4 class="text-right">November 2014</h4>
     					</div>
     				</div>
     				<div class="col-lg-12">
