Added new Projects

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
     						<li><p>The application allows you to add tasks and at the same time provides you with an interactive Snakes and Ladders game. The application also features a walkthrough which will help you with the functioning of the application.</p></li>
     					</ul>
     				</div>
-    			</div>
+    			</div><br/><br/>
     			<div class="row">
     				<div class="col-lg-12">	
     					<div class="pull-left">
