Edit Project Details

--- a/index.html
+++ b/index.html
@@ -400,6 +400,7 @@
     					<ul>
     						<li><p>A Web application molded into a game to make you more productive and Efficient. The application is designed using HTML, CSS and Javascript.</p></li>
     						<li><p>The application allows you to add tasks and at the same time provides you with an interactive Snakes and Ladders game. The application also features a walkthrough which will help you with the functioning of the application.</p></li>
+    						<li><i class="fa fa-link" aria-hidden="true"></i><a href="https://github.com/kiiiiNNNNNNNNNyyyy/Human-Computer-Interaction" target="_blank">Github Link</a></li>
     					</ul>
     				</div>
     			</div><br/><br/>
@@ -416,6 +417,7 @@
     					<ul>
     						<li><p>An e-commerce prototype website built using the MEAN stack to allow users to order food online.</p></li> 
     						<li><p>The site also allows user to compare the prices of the same cuisine offered by different vendors. The application also uses Elastic search for real time searching of the products.</p></li>
+    						<li><i class="fa fa-link" aria-hidden="true"></i><a href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Programming-Project" target="_blank">Github Link</a></li>
     					</ul>
     				</div>
     			</div><br/><br/>
@@ -433,6 +435,7 @@
 	    					<li><p>Developed a web application by implementing the LAMP Stack for college students to allow them to sell or buy used and new books.</p></li>
 	    					<li><p>Developed a Database Schema for the entire Web Application using MySQL.</p></li>
 	    					<li><p>Developed a MySQL based Chat Application and integrated it into the website.</p></li>
+	    					<li><i class="fa fa-link" aria-hidden="true"></i><a href="https://www.facebook.com/bookcloud/" target="_blank">Facebook Link</a></li>
 	    				</ul>
     				</div>
     			</div><br/><br/>
