Edit Project Details

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
     					<ul>
     						<li><p>A Web application molded into a game to make you more productive and Efficient. The application is designed using HTML, CSS and Javascript.</p></li>
     						<li><p>The application allows you to add tasks and at the same time provides you with an interactive Snakes and Ladders game. The application also features a walkthrough which will help you with the functioning of the application.</p></li>
-    						<li><i class="fa fa-link" aria-hidden="true"></i><a href="https://github.com/kiiiiNNNNNNNNNyyyy/Human-Computer-Interaction" target="_blank"><p>Github Link</p></a></li>
+    						<i class="fa fa-link" aria-hidden="true"></i><a href="https://github.com/kiiiiNNNNNNNNNyyyy/Human-Computer-Interaction" target="_blank"><p>Github Link</p></a>
     					</ul>
     				</div>
     			</div><br/><br/>
