--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
     						<hr class="star-light">
     						<span class="skills">Web Developer - Game Developer - Software  Developer</span>
     					</div>
+    					<div>
+    						<a href="https://www.facebook.com/arjun.dass.18" target="_blank"><button type="button" class="btn btn-fb" style="background-color: #3B5998;color: #fff;"><i class="fa fa-facebook left"></i>Facebook</button></a>
+    						<a href="https://twitter.com/dontstop_belivn" target="_blank"><button type="button" class="btn btn-tw" style="background-color: #55ACEE;color: #fff;""><i class="fa fa-twitter left"></i> Twitter</button></a>                                                                                               
+    						<a href="https://plus.google.com/111473305952243220263" target="_blank"><button type="button" class="btn btn-gplus" style="background-color: #DD4B39;color: #fff;"><i class="fa fa-google-plus left"></i> Google +</button></a>
+    						<a href="https://www.linkedin.com/in/arjun-dass-3a3434106" target="_blank"><button type="button" class="btn btn-li" style="background-color: #0082CA;color: #fff;"><i class="fa fa-linkedin left"></i> Linkedin</button></a>
+    						<a href="https://github.com/kiiiiNNNNNNNNNyyyy" target="_blank"><button type="button" class="btn btn-git" style="background-color: #ccc;color: #fff;"><i class="fa fa-github left"></i> Github</button></a>
+    					</div>
     				</div>
     			</div>
     		</div>
@@ -251,7 +258,7 @@
     							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;OCJP - Oracle  Certified Java Programmer</p>
     						</div>
     						<div class="pull-right">
-    							<p>Date</p>
+    							<p>March 2014</p>
     						</div>
     					</div>
 
@@ -260,7 +267,7 @@
     							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;NIIT Certificate of Excellence</p>
     						</div>
     						<div class="pull-right">
-    							<p>Date</p>
+    							<p>March 2014</p>
     						</div>
     					</div>
 
@@ -269,7 +276,7 @@
     							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;Cetificate of Excellent Performance - Hindustan Petroleum Internship</p>
     						</div>
     						<div class="pull-right">
-    							<p>Date</p>
+    							<p>July 2014</p>
     						</div>
     					</div>
 
@@ -278,7 +285,7 @@
     							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;Certificate of Excellent Performance - Job Ninja Internship</p>
     						</div>
     						<div class="pull-right">
-    							<p>Date</p>
+    							<p>January 2016</p>
     						</div>
     					</div>
 
@@ -287,7 +294,7 @@
     							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;Certificate of Completion: HTML5 Game Development - Udemy</p>
     						</div>
     						<div class="pull-right">
-    							<p>Date</p>
+    							<p>September 2016</p>
     						</div>
     					</div>
 
@@ -296,7 +303,7 @@
     							<p><span><i class="fa fa-certificate fa-1" aria-hidden="true"></i></span>&nbsp;Certificate of Completion: Java Multithreading - Udemy</p>
     						</div>
     						<div class="pull-right">
-    							<p>Date</p>
+    							<p>October 2016</p>
     						</div>
     					</div>
     				</div>
@@ -400,7 +407,6 @@
     					<ul>
     						<li><p>A Web application molded into a game to make you more productive and Efficient. The application is designed using HTML, CSS and Javascript.</p></li>
     						<li><p>The application allows you to add tasks and at the same time provides you with an interactive Snakes and Ladders game. The application also features a walkthrough which will help you with the functioning of the application.</p></li>
-    						<i class="fa fa-link" aria-hidden="true"></i><a href="https://github.com/kiiiiNNNNNNNNNyyyy/Human-Computer-Interaction" target="_blank"><p>Github Link</p></a>
     					</ul>
     				</div>
     			</div><br/><br/>
@@ -417,7 +423,6 @@
     					<ul>
     						<li><p>An e-commerce prototype website built using the MEAN stack to allow users to order food online.</p></li> 
     						<li><p>The site also allows user to compare the prices of the same cuisine offered by different vendors. The application also uses Elastic search for real time searching of the products.</p></li>
-    						<li><i class="fa fa-link" aria-hidden="true"></i><a href="https://github.com/kiiiiNNNNNNNNNyyyy/Web-Programming-Project" target="_blank"><p>Github Link</p></a></li>
     					</ul>
     				</div>
     			</div><br/><br/>
@@ -435,7 +440,6 @@
 	    					<li><p>Developed a web application by implementing the LAMP Stack for college students to allow them to sell or buy used and new books.</p></li>
 	    					<li><p>Developed a Database Schema for the entire Web Application using MySQL.</p></li>
 	    					<li><p>Developed a MySQL based Chat Application and integrated it into the website.</p></li>
-	    					<li><i class="fa fa-link" aria-hidden="true"></i><a href="https://www.facebook.com/bookcloud/" target="_blank"><p>Facebook Link</p></a></li>
 	    				</ul>
     				</div>
     			</div><br/><br/>
@@ -452,6 +456,15 @@
     					<ul>
     						<li><p>The Project defines the techniques by which we could reduce the cost implementing the LAN for an Organiazation using vlan in switches, truncing, voice over IP etc.</p></li>
     					</ul>
+    				</div>
+    			</div><br/><br/>
+    			<div class="row">
+    				<div class="col-lg-12">
+    					<div class="container">
+    						<div class="pull-right">
+    							<p>* All Projects are avaialble on my githun page.</p>
+    						</div>
+    					</div>
     				</div>
     			</div>
     		</div>
@@ -523,19 +536,19 @@
     							<h3>Around the Web</h3>
     							<ul class="list-inline">
     								<li>
-    									<a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+    									<a href="https://www.facebook.com/arjun.dass.18" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
     								</li>
     								<li>
-    									<a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+    									<a href="https://plus.google.com/111473305952243220263" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
     								</li>
     								<li>
-    									<a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
+    									<a href="https://twitter.com/dontstop_belivn" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
     								</li>
     								<li>
-    									<a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+    									<a href="https://www.linkedin.com/in/arjun-dass-3a3434106" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
     								</li>
     								<li>
-    									<a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
+    									<a href="https://github.com/kiiiiNNNNNNNNNyyyy" target="_blank" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
     								</li>
     							</ul>
     						</div>
